--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -204,7 +204,7 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#">
+                <a href="#" (click)="_usuarioService.logOut()">
                   <i class="fa fa-power-off"></i> Logout</a>
               </li>
             </ul>
