--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -26,7 +26,7 @@
               <a routerLinkActive="active" routerLink='/account-settings'>Account Setting</a>
             </li>
             <li>
-              <a routerLink='/login'>Logout</a>
+              <a href="#" (click)="_usuarioService.logOut()">Logout</a>
             </li>
           </ul>
         </li>
