--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,7 +32,9 @@
                   <div class="row">
                       <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
                             <div class="social">                                
-                                <button type="button" id="btnGoogle" href="javascript:void(0)" class="btn btn-googleplus" data-toggle="tooltip" title="Login with Google"> <i aria-hidden="true" class="fa fa-google-plus"></i> </button> 
+                                <button type="button" id="btnGoogle" href="javascript:void(0)" class="btn btn-googleplus" title="Login with Google">
+                                    <i aria-hidden="true" class="fa fa-google-plus"></i> 
+                                </button> 
                             </div>
                       </div>
                   </div>
