--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -55,15 +55,15 @@
         <!-- Search -->
         <!-- ============================================================== -->
         <li class="nav-item hidden-xs-down search-box">
-          <a class="nav-link hidden-sm-down waves-effect waves-dark" href="javascript:void(0)">
+          <a (click)="focusSearch()" class="nav-link hidden-sm-down waves-effect waves-dark" href="javascript:void(0)">
             <i class="ti-search"></i>
           </a>
-          <form class="app-search">
-            <input type="text" class="form-control" placeholder="Search & enter">
+          <div class="app-search">
+            <input id="search" #search (keyup.enter)="buscar(search.value)" type="text" class="form-control" placeholder="Buscar & enter">
             <a class="srh-btn">
               <i class="ti-close"></i>
             </a>
-          </form>
+          </div>
         </li>
         <!-- ============================================================== -->
         <!-- Messages -->
